<resources>

        <!--Nom de l'application-->
    <string name="app_name">RecipeManager</string>

        <!--  Inscription(createAccount.kt)-->
    <string name="ins_create_account">Crée un compte</string>
    <string name="ins_RCPMANAGER">s\'inscrire sur RecipeManager</string>
    <string name="ins_error">@string/con_error</string>

    <string name="ins_last_name">Nom …</string>
    <string name="ins_first_name">Prenom …</string>
    <string name="ins_email">@string/con_email</string>
    <string name="ins_password">@string/con_password</string>


    <string name="ins_already_have_an_account">J\'ai déjà un compte</string>
    <string name="ins_register">S\'inscrire</string>


    <!--  Connexion(MainActivity.kt) | activity_main.xml  -->
    <string name="con_login_title">Connexion</string>
    <string name="con_login_sub_title">Connexion à RecipeManager</string>
    <string name="con_error">error</string>
    <string name="con_email">Email …</string>
    <string name="con_password">Mot de passe …</string>
    <string name="con_create_an_account">Crée un nouveau Compte</string>
    <string name="con_login_btn">Se connecter</string>

        <!--Menu-->
    <string name="bottom_home_item">Accueil</string>
    <string name="bottom_favoris_item">Mes favoris</string>
    <string name="bottom_add_rcp_item">Ajouter</string>
    <string name="bottom_user_item">Gerer</string>


    <!--  Accueil (Listes des recette de l'apli -> Accueil.kt ) etoile coloré et vide -->
            <string name="home_page_title">Accueil</string>
            <string name="home_page_last_rcp">Liste des dernières recettes</string>

            <string name="home_page_rcp_name">Titre:</string>
            <string name="home_page_rcp_publish">Publié le:</string>
            <string name="home_page_rcp_description">Description:</string>



    <!--  Mes favoris (MyFav.kt) étoile coloré -->
            <string name="fav_page_title">Mes Favoris</string>

            <string name="fav_page_rcp_name">Titre:</string>
            <string name="fav_page_rcp_publish">Publié le:</string>
            <string name="fav_page_rcp_description">Description:</string>



    <!--  Ajouter Recette (AddRecipe.kt) -->
            <string name="add_rcp_page_title">Ajouter une recette</string>

            <string name="add_rcp_page_upload_button">Ajouter une image</string>
            <string name="add_rcp_page_name_input">Titre…</string>
            <string name="add_rcp_page_description_input">Description…</string>
            <string name="add_rcp_page_ingredients">Ingredients…</string>
            <string name="add_rcp_page_steps">Etapes de préparation…</string>

            <string name="add_rcp_time_preparation_input">Temps de préparation:</string>

            <string-array name="temps_preparation">
                <item>Non renseigné</item>
                <item>Moins de 15 minutes</item>
                <item>15 minutes</item>
                <item>30 minutes</item>
                <item>1 heure</item>
                <item>1 heure et 30 minutes</item>
                <item>2 heures</item>
                <item>Plus de 2 heures</item>
            </string-array>

            <string name="add_rcp_cuisson_spinner_input">Temps de cuisson:</string>

            <string-array name="temps_cuisson">
                <item>Non renseigné</item>
                <item>Moins de 15 minutes</item>
                <item>15 minutes</item>
                <item>30 minutes</item>
                <item>1 heure</item>
                <item>1 heure et 30 minutes</item>
                <item>2 heures</item>
                <item>Plus de 2 heures</item>
            </string-array>

            <string name="add_rcp_page_confirm_button">Ajouter</string>
            <string name="update_rcp_page_confirm_button">Modifier</string>

    <!-- POPUP Detail Recette(Detail.kt)   -->
            <string name="popup_rcp_name">Titre de la recette :</string>
            <string name="popup_rcp_description_title">@string/fav_page_rcp_description</string>
            <string name="popup_rcp_description">Description de la recette</string>
            <string name="popup_rcp_ingredients_title">Ingredients :</string>
            <string name="popup_rcp_ingredients">Liste de l\'ensemble des ingrédients</string>
            <string name="popup_rcp_steps_title">Etape de préparation :</string>
            <string name="popup_rcp_steps">Lister chaque Etape de préparation</string>

    <string name="popup_rcp_time_preparation_title">@string/add_rcp_time_preparation_input</string>
    <string name="popup_rcp_time_preparation">Non renseigné</string>

    <string name="popup_rcp_cuisson_title">@string/add_rcp_cuisson_spinner_input</string>
    <string name="popup_rcp_cuisson">Non renseigné</string>





    <!--  Gerer Recette (ManageRecipe.kt)  -->


    <!--  Gerer Utilisateur (UsersActivity.kt)  -->

    <string name="user_subtitle">Gestion des Utilisateurs</string>
    <string name="user_list">Liste des utilisateurs</string>
    <string name="user_nom">Nom</string>
    <string name="user_prenom">Prenom</string>
    <string name="user_email">Email</string>
    <string name="user_role">Rôle</string>



    <!--  add_rcp_page_steps_spinner_input  -->



    <string-array name="Role">
        <item>utilisateur</item>
        <item>admin</item>
    </string-array>



   </resources>