<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeActivity">

    <ImageView
        android:id="@+id/rcp_return_button"
        android:layout_width="35dp"
        android:layout_height="38dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rcp_return_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/update_upload_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lightBlue"
                android:layout_marginTop="5dp"
                android:padding="@dimen/default_margin"
                android:text="@string/add_rcp_page_upload_button"
                android:textColor="@color/white"
                android:textSize="22dp" />

            <ImageView
                android:layout_marginTop="5dp"
                android:id="@+id/update_preview_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_defaut" />
        </LinearLayout>

        <TextView
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/home_page_rcp_name"/>

        <EditText
            android:id="@+id/update_titre_input"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/add_rcp_page_name_input"
            android:paddingLeft="20dp" />


        <TextView
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/home_page_rcp_description" />

        <EditText
            android:id="@+id/update_description_input"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/add_rcp_page_description_input"
            android:paddingLeft="20dp" />

        <TextView
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Ingredients:" />

        <EditText
            android:id="@+id/update_ingredient_input"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/add_rcp_page_ingredients"
            android:paddingLeft="20dp" />


        <TextView
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Etapes de préparation :" />

        <EditText
            android:id="@+id/update_etapes_input"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/add_rcp_page_steps"
            android:paddingLeft="20dp" />

        <TextView
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_rcp_time_preparation_input" />

        <Spinner
            android:id="@+id/update_prepa_spinner"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:entries="@array/temps_preparation"
            android:paddingLeft="20dp" />

        <TextView
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_rcp_cuisson_spinner_input" />

        <Spinner
            android:id="@+id/update_cuisson_spinner"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:entries="@array/temps_cuisson"
            android:paddingLeft="20dp" />

        <Button
            android:id="@+id/update_confirm_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/darkGray"
            android:text="@string/update_rcp_page_confirm_button"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/default_margin"
            android:textSize="24dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
